# qepy

./: .gitignore  0.0001-bands-pp.out  1-Si-Band.ipynb  3-Si-PDOS.ipynb  4-Si-KDOS.ipynb  5-Fe-DOS.ipynb  6-Fe-Band.ipynb  B_striped.VASP  B_striped.poscar  B_striped.py  C.poscar  C_electron_band.ipynb  C_phonon_band.ipynb  Dev.BN.ipynb  Dev.B_striped-Relax.ipynb  Dev.B_striped.ipynb  Dev.Fe-TB2J.ipynb  Dev.Launcher.ipynb  Dev.MnPS3.ipynb  Dev.MnTe_Wannier.ipynb  Dev.PbTe.ipynb  Dev.UTe2.ipynb  Dev.ipynb  Dev.r2scan.ipynb  Dev.vacuum.ipynb  Fe.ipynb  Fe_projection.ipynb  LICENSE  MnPS3.ipynb  MnTe.sh  NbSe2.ipynb  PbTe.py  PbTe_us.py  README.md  Si.ipynb  Si_DOS.ipynb  Si_parameter_test.ipynb  TiSe2.py  Untitled.ipynb  Wannier.ipynb  (+35 more)
.github/workflows/: publish.yml  release.py  release.yml  setup.py
Devs/: Bi.ipynb  Dev.BN.ipynb  Dev.B_striped-Relax.ipynb  Dev.B_striped.ipynb  Dev.MnTe_HP.ipynb  Dev.MnTe_Wannier.ipynb  Dev.TiSe2.ipynb  Dev.UTe2.ipynb  NbSe2.py  NbSe2.sh  Supercell.ipynb
Remotes/: job.py  job_UTe3.py  job_gpu.py  run-gpu.sh  run.sh  run_UTe3.sh
Research/: 3D_Cell.ipynb  BP-Debug.ipynb  BP.ipynb
Research/Alloy/: Bi-1L.ipynb
Research/BN/: BN.poscar
Research/MnTe/: Dev.MnTe.ipynb  Dev.MnTe_SOC.ipynb  Dev.MnTe_U.ipynb  Dev.MnTe_xy.ipynb  Dev.MnTe_z.ipynb
Research/TiSe2/: Se.UPF  TiSe2.poscar
Research/UTe2/: U.UPF  UTe2.ipynb  UTe2.poscar
Structures/: Bi-1L.poscar  Bi.poscar  CoO.poscar  FeO.poscar  IrSbSe.poscar  MnPS3.poscar  MnTe.poscar  NbSe2-1L.poscar  NbSe2.poscar  NbSe2_2sq2_x_2sq2.poscar  PbTe.poscar  Si.poscar  TiSe2.poscar
TODO/: 3D_Cell.ipynb  BP.ipynb  Dev.C_PAW-Wannier.ipynb  Dev.C_PAW.ipynb  Dev.Launcher.ipynb  Dev.wanier.ipynb  FeO.ipynb  MaterialsProject.ipynb  MnPS3-yaml.ipynb  Notebook.ipynb  Si_parameter_test.ipynb  manifest.yaml  plot.ipynb  test.ipynb
Tutorials/: 1-Si-Band.ipynb  10-C-Projection.ipynb  10-C-Wannier.ipynb  11-C-Wannier.ipynb  2-Si-DOS.ipynb  3-Si-PDOS.ipynb  4-Si-KDOS.ipynb  5-Al-PDOS.ipynb  6-Fe-Band.ipynb  7-Fe-DOS.ipynb  8-C-Band.ipynb  9-C-Phonon.ipynb  C_electron_band.ipynb  config.json
Tutorials/Structures/: NbSe2.poscar
bands/: 0.0001.bands.dat.gnu  0.0005.bands.dat.gnu  0.001.bands.dat.gnu  0.005.bands.dat.gnu  0.006.bands.dat.gnu  0.007.bands.dat.gnu  0.008.bands.dat.gnu  0.009.bands.dat.gnu  0.01.bands.dat.gnu  0.02.bands.dat.gnu  0.03.bands.dat.gnu  0.04.bands.dat.gnu  0.05.bands.dat.gnu
example_data/: NbSe2.poscar  input_parameter.in  input_parameter.json  pw.in  vc_relax.out
inputs/: 0.0001-vc-relax.in  0.0005-vc-relax.in  0.001-vc-relax.in  0.005-vc-relax.in  0.006-vc-relax.in  0.007-vc-relax.in  0.008-vc-relax.in  0.009-vc-relax.in  0.01-vc-relax.in  0.02-vc-relax.in  0.03-relax.in  0.03-vc-relax.in  0.04-relax.in  0.04-vc-relax.in  0.05-bands.in  0.05-relax.in  0.05-scf.in  0.05-vc-relax.in
outputs/: 0.0001-scf.out  0.0005-scf.out  0.001-scf.out  0.005-scf.out  0.006-scf.out  0.007-scf.out  0.008-scf.out  0.009-scf.out  0.01-scf.out  0.02-scf.out  0.03-scf.out  0.04-scf.out  0.05-scf.out
pseudos/US/: Al.UPF  Co.UPF  Fe.UPF  O.UPF  P.UPF  S.UPF  Te.UPF
scripts/: MnPS3.py  MnPS3.sh  MnTe_wannier.py  MnTe_xy.py  MnTe_xy_z.py  MnTe_z.py  NbSe2.py  NbSe2_d2.py  NbSe2_d3.py  PbTe.py  TiSe2.py  chiral.py  generate.py  reads.py  run.sh  run_MnTe_wan.sh  run_NbSe2.sh  run_NbSe2_d3.sh  run_TiSe2.sh  run_xy.sh  run_xy_z.sh  run_z.sh  scaffold.py  utils.py  writes.py
src/: Convergence-Analysis.ipynb  __init__.py  check.py  compute.py  generate.py  kpoints.py  model.py  ph.py  plot_band.py  plots.py  project.py  pw.py  reads.py  scaffold.py  utils.py  writes.py
src/esma/: check.py  (+15 more)
(+65 files in other folders)
