[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "espresso-machine"
authors = [
  { name="Susy Exists", email="susy@selectron.me" },
]
description = "Quantum Espresso automation tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "qcelemental",
  "ase",
  "Flask",
  "qe-tools",
  "scipy",
  "seekpath",
  "untangle",
  "tools_barebone",
  "ipykernel",
  "ipython"
]

[project.urls]
Homepage = "https://github.com/susyexstsi/espresso-machine"

