[project]
name="esma"
version='0.0.231'
authors = [
  { name="Susy Exists", email="susy@selectron.me" },
]
description = "Quantum Espresso automation tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/susyexstsi/espresso-machine"