[metadata]
name = "espresso-machine"
authors = [{ name="Susy Exists", email="susy@selectron.me" },]
description = "Quantum Espresso automation tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "qcelemental",
  "ase",
  "Flask",
  "qe-tools",
  "scipy",
  "seekpath",
  "untangle",
  "tools_barebone",
  "ipykernel",
  "ipython"
]

[project.urls]
Homepage = "https://github.com/susyexstsi/espresso-machine"


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point